<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_base</name>
  <version>0.0.1</version>
  <description>ROS 2 Python wrapper for Rosmaster motor control board</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
